# m3

./: Cargo.toml  README.md  rust-toolchain.toml
src/: fuse_fs.rs  main.rs  vfs.rs
testdir/gamedir/: gamefile1.txt
testdir/gamedir/subdir/: gamefile2.txt
testdir/gamedir/subdir/subsubdir/: gamefile3.txt
testdir/moddir/: modfile1.txt
testdir/moddir/subdir/: modfile2.txt
