[package]
name = "m3"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
ctrlc = "3.4.2"
directories = "5.0.1"
fuser = "0.14.0"
# iced = "0.12.1"
indexmap = "2.2.3"
kdl = "4.6.0"
libc = "0.2.153"
once_cell = "1.19.0"
slab = "0.4.9"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"

[profile.dev.package."*"]
opt-level = 3

